--- a/index.html
+++ b/index.html
@@ -38,8 +38,8 @@
     <!-- Collect the nav links, forms, and other content for toggling -->
     <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
       <ul class="nav navbar-nav menu__list">
-        <li class="navlink-active"><a href="#" class="navlink">Home</a></li>
-        <li><a href="#" class="navlink">Events</a></li>
+        <li class="navlink-active"><a href="index.html" class="navlink">Home</a></li>
+        <li><a href="events.html" class="navlink">Events</a></li>
         <li><a href="#" class="navlink">Board</a></li>
         <li><a href="#" class="navlink">Constituents</a></li>
         <li><a href="#" class="navlink">Culture Night</a></li>
@@ -59,11 +59,11 @@
 
 
 
-<div id="mainCarousel" class="carousel slide" data-ride="carousel">
+<div id="mainCarousel" class="carousel slide frontpageCarousel" data-ride="carousel">
   <!-- Wrapper for slides -->
   <div class="carousel-inner" role="listbox">
     <div class="item active">
-      <img src="http://cauci.com/media/slide/cauci1.jpg" alt="Chania">
+      <img src="http://cauci.com/media/slide/cauci1.jpg" alt="CAUCI">
     </div>
 
     <div class="item">
@@ -89,15 +89,37 @@
 
 <div class="container" style="text-align: center; padding-top: 30px; opacity: .5;">
   <p>scroll down to learn more!</p>
-  <a href="#about"><i class="fa fa-chevron-down" style="font-size: 1.4em;"></i></a>
+  <a href="#next"><i class="fa fa-chevron-down faa-float animated" style="font-size: 1.4em;"></i></a>
 </div>
 
+<div class="container" id="chat-news">
+  <div class="row wow animated fadeIn">
+    <div class="col-md-5 col-md-offset-1">
+      <h2>Chat with us!</h2>
+      <div id="chatbox">
+        <iframe src="http://www3.cbox.ws/box/?boxid=3473037&boxtag=395chb&sec=main" marginheight="0" marginwidth="0" frameborder="0" width="100%" height="100%" scrolling="auto" allowtransparency="yes" name="cboxmain3-3473037" id="cboxmain3-3473037"></iframe>
+      </div>
+      <div id="chatmsg">
+        <iframe src="http://www3.cbox.ws/box/?boxid=3473037&boxtag=395chb&sec=form" marginheight="0" marginwidth="0" frameborder="0" width="100%" height="100%" scrolling="no" allowtransparency="yes" name="cboxform3-3473037" id="cboxform3-3473037"></iframe>
+      </div>
+    </div>
+    <div class="col-md-6">
+      <h2>Latest News</h2>
+      <p>CACN is May 14th</p>
+      <p>Shout out to USC's CASA!</p>
+      <p>Check out CAMA's demo at the flagpoles on 4/8</p>
+      </ul>
+    </div>
+  </div>
+</div>
+
+<span id="next"></span>
 <div class="container" id="about">
-<div class="row">
+<div class="row wow animated fadeInLeft">
   <div class="col-md-6">
     <img src="http://cauci.com/media/slide/cadc1.jpg">
   </div>
-  <div class="col-md-6 about-text wow animated fadeInLeft">
+  <div class="col-md-6 about-text">
     <h2>About Chinese Association</h2>
     <p>
       Chinese Association is a social, cultural, and community service-based club located at the University of California, Irvine. Our mission is to share Chinese and Chinese-American culture with the greater Orange County and Los Angeles area.
@@ -107,29 +129,52 @@
     </p>
 
     <ul>
-      <li>
+      <a href="#member" class="buttonlink"><li>
         membership
-      </li>
-      <li>
+      </li></a>
+      <a href="#events" class="buttonlink"><li>
         upcoming events
-      </li>
+      </li></a>
     </ul>
   </div>
 </div>
 </div>
 
+<span id="member"></span>
 <div class="container" id="membership">
-  <div class="row">
-    <div class="col-md-6 membership-text wow animated fadeInRightBig">
+  <div class="row wow animated fadeInRight">
+    <div class="col-md-6 membership-text">
 
       <h2>Membership</h2>
       <p>
         Chinese Association is always open to new members! Whether you are a college freshman, a recent graduate, or anywhere in between, you are welcome to join us at our next meeting. Find your big, meet your family, and get to know your fellow members and board officers!
       </p>
 
-      <p>
+      <p>During the school year, meetings are <b>every Thursday @ 7pm</b> at the Ring Room in the Cross Cultural Center.</p>
+
+      <ul>
+        <a class="buttonlink" data-toggle="modal" data-target="#learnmore"><li>
+          learn more
+        </li></a>
+      </ul>
+    </div>
+    <div class="col-md-6">
+      <img src="http://cauci.com/media/slide/cama1.jpg">
+    </div>
+  </div>
+</div>
+
+
+<div id="learnmore" class="modal fade" role="dialog">
+  <div class="modal-dialog">
+    <div class="modal-content">
+      <div class="modal-header">
+        <button type="button" class="close" data-dismiss="modal">&times;</button>
+</div>
+<div class="modal-body">
+  <p>
         <center>
-          Official membership is only $30 for the entire year and includes:
+          <i>Official membership</i> is only <b>$30</b> for the <b>entire year</b> and includes:
         </center>
       </p>
 
@@ -137,7 +182,7 @@
       <div class="col-md-6">
       <ul>
         <li>This year's newly designed CAUCI t-shirt</li>
-        <li>Exclusive discounts to select restaurants and businesses across Orange and Los Angeles county</li>
+        <li><a href="#sponsorslist" class="closemodal">Exclusive discounts</a> to select restaurants and businesses across Orange and Los Angeles county</li>
         <li>Discounts to select after-events and social mixers</li>
       </ul>
       </div>
@@ -149,16 +194,131 @@
       </div>
     </div>
 
-      <p>While all members can join our events, only official members have access to the above benefits. Curious? Come out to our next meeting! For questions regarding membership, please email <a href="mailto:secretary@cauci.com">secretary@cauci.com</a>.
+      <p style="padding: 0 24px 15px 24px">While all members can join our events, only official members have access to the above benefits. Curious? Come out to our next meeting! For questions regarding membership, please email <a href="mailto:secretary@cauci.com" class="closemodal">secretary@cauci.com</a>.
+      </p>
+</div>
+</div>
+
+</div>
+</div>
+
+<span id="sponsorslist"></span>
+<div class="container" id="sponsors">
+  <div class="row">
+    <div class="col-md-10 col-md-offset-1 wow animated fadeIn">
+      <h2>Our Sponsors</h2>
+
+      <p>Sign up for membership to get your membership card and get access to exclusive discounts around Irvine, as well as discounts across the greater Orange and Los Angeles County!
+      </p>
+      <p>
+        Many thanks to our sponsors and <b>platinum sponsors</b> for their support and for providing our members with these awesome deals.
       </p>
 
-      <p>During the school year, meetings are every Thursday @7pm at the Ring Room in the Cross Cultural Center.</p>
+      <div class="row">
+        <div class="col-md-4">
+          <h3>Bardot</h3>
+          <h1>10%</h1>
+          <p><i>off entire order</i></p>
+          5331 University Dr<br>
+          Irvine, CA 92612<br>
+          (949) 552-5119
+        </div>
 
-    </div>
-    <div class="col-md-6">
-      <img src="http://cauci.com/media/slide/cama1.jpg">
+        <div class="col-md-4">
+          <h3>Boiling Point</h3>
+          <h1>10%</h1>
+          <p><i>off entire order</i></p>
+
+          All SoCal locations
+        </div>
+
+        <div class="col-md-4">
+          <h3>Capitol Seafood</h3>
+          <p><i>gives their support</i></p>
+          85 Fortune Dr<br>
+          Irvine, CA 92618<br>
+          (949) 788-9218<br>
+        </div>
+      </div>
+
+
+      <div class="row">
+        <div class="col-md-4">
+          <h3>Gina's Pizza</h3>
+          <h1>15%</h1>
+          <p><i>off entire order</i></p>
+          4533 Campus Dr<br>
+          Irvine, CA 92612<br>
+          (949) 725-1144
+        </div>
+
+        <div class="col-md-4">
+          <h3>L&L Hawaiian BBQ</h3>
+          <h1>10%</h1>
+          <p><i>off entire order</i></p>
+
+          14310 Culver Dr<br>
+          Irvine, CA 92604<br>
+          (949) 262-9088<br>
+        </div>
+
+        <div class="col-md-4">
+          <h3>Lollicup</h3>
+          <h1>50¢</h1>
+          <p><i>off any drink</i></p>
+          2700 Alton Pkwy<br>
+          Irvine, CA 92606<br>
+          (949) 679-8885<br>
+        </div>
+      </div>
+
+
+      <div class="row">
+        <div class="col-md-4">
+          <h3>Strickland's Ice Cream</h3>
+          <h1>10%</h1>
+          <p><i>off entire order</i></p>
+          4523 Campus Dr<br>
+          Irvine, CA 92612<br>
+          (949) 387-9955
+        </div>
+
+        <div class="col-md-4">
+          <h3>Vitality Bowls</h3>
+          <h1>10%</h1>
+          <p><i>off acai bowls</i></p>
+
+          4515a Campus Dr<br>
+          Irvine, CA 92612<br>
+          (949) 737-2082<br>
+        </div>
+
+        <div class="col-md-4">
+          <h3>Yogurtland</h3>
+          <h1>20%</h1>
+          <p><i>off entire order</i></p>
+          4187 Campus Dr<br>
+          Irvine, CA 92612<br>
+          (949) 854-4580<br>
+        </div>
+      </div>
     </div>
   </div>
+</div>
+
+<div class="container wow animated fadeInUp" id="questions">
+  <h2>Questions, comments, concerns, compliments?</h2>
+  <ul><a href="#contact" class="buttonlink"><li>contact us</li></a></ul>
+
+</div>
+
+<div class="footer">
+  <p>Chinese Association at the University of California, Irvine</p>
+    <i class="fa fa-facebook"></i></a>
+    <i class="fa fa-instagram"></i></a>
+    <i class="fa fa-tumblr"></i></a>
+    <i class="fa fa-flickr"></i></a>
+  </ul>
 </div>
 
 </body>
@@ -174,3 +334,9 @@
               new WOW().init();
               </script>
 </html>
+
+<script>
+$('.closemodal').on('click', function() {
+    $('#learnmore').modal('hide');
+});
+</script>
