--- a/events.html
+++ b/events.html
@@ -32,7 +32,7 @@
         <span class="icon-bar"></span>
         <span class="icon-bar"></span>
       </button>
-      <a class="navbar-brand" href="#"><img src="img/logo.png"></a>
+      <a class="navbar-brand" href="index.html"><img src="img/logo.png"></a>
     </div>
 
     <!-- Collect the nav links, forms, and other content for toggling -->
@@ -55,97 +55,143 @@
   </div><!-- /.container-fluid -->
 </nav>
 
-<section id="main-content">
-  <div id="guts">
-
 <div class="container" id="events">
-    <h2>Winter Quarter Events</h2>
 </div>
 
 <div id="mainCarousel" class="carousel slide eventsCarousel carousel-fade" data-ride="carousel">
   <!-- Wrapper for slides -->
   <div class="carousel-inner" role="listbox">
     <div class="item active">
-      <div class="event-up">
+      <div class="event-up grid">
+        <figure class="effect-events-hover">
         <img class="img-event" src="https://images.unsplash.com/photo-1453227588063-bb302b62f50b?crop=entropy&fit=crop&fm=jpg&h=725&ixjsv=2.1.0&ixlib=rb-0.3.5&q=80&w=1325">
-        <span>
+        <figcaption>
+          <span>
           <h2>week</h2>
           <h1>1</h1>
-        </span>
+          </span>
+          <p>description of week 1's event here</p>
+        </figcaption>
+      </figure>
       </div>
 
-      <div class="event-down">
+      <div class="event-down grid">
+        <figure class="effect-events-hover">
         <img class="img-event" src="https://images.unsplash.com/photo-1442512595331-e89e73853f31?ixlib=rb-0.3.5&q=80&fm=jpg&crop=entropy&w=1080&fit=max&s=a24580d4b984c1ede40051bf36afca1a">
-        <span>
+        <figcaption>
+          <span>
           <h2>week</h2>
           <h1>2</h1>
-        </span>
+          </span>
+          <p>description of week 2's event here</p>
+        </figcaption>
+      </figure>
       </div>
 
-      <div class="event-up">
+      <div class="event-up grid">
+        <figure class="effect-events-hover">
         <img class="img-event" src="https://images.unsplash.com/photo-1459947639567-6be6434b9f9f?ixlib=rb-0.3.5&q=80&fm=jpg&crop=entropy&w=1080&fit=max&s=3bcdd2c89c309bd0530d9b60d49917d2">
-        <span>
+        <figcaption>
+          <span>
           <h2>week</h2>
           <h1>3</h1>
-        </span>
+          </span>
+          <p>description of week 3's event here</p>
+        </figcaption>
+      </figure>
       </div>
 
-      <div class="event-down">
+      <div class="event-down grid">
+        <figure class="effect-events-hover">
         <img class="img-event" src="https://images.unsplash.com/photo-1459890986562-e2811aaa0e95?ixlib=rb-0.3.5&q=80&fm=jpg&crop=entropy&w=1080&fit=max&s=926da4f83563e257d04a47e48eb405b2">
-        <span>
+        <figcaption>
+          <span>
           <h2>week</h2>
           <h1>4</h1>
-        </span>
+          </span>
+          <p>description of week 4's event here</p>
+        </figcaption>
+      </figure>
       </div>
 
-      <div class="event-up">
+      <div class="event-up grid">
+        <figure class="effect-events-hover">
         <img class="img-event" src="https://images.unsplash.com/photo-1459789867050-92376a5e7fab?ixlib=rb-0.3.5&q=80&fm=jpg&crop=entropy&w=1080&fit=max&s=389055adca0b68489c417eef0b60363f">
-        <span>
+        <figcaption>
+          <span>
           <h2>week</h2>
           <h1>5</h1>
-        </span>
+          </span>
+          <p>description of week 5's event here</p>
+        </figcaption>
+      </figure>
       </div>
     </div>
 
     <div class="item">
-      <div class="event-up">
+      <div class="event-up grid">
+        <figure class="effect-events-hover">
         <img class="img-event" src="https://images.unsplash.com/photo-1459706047544-bac915bf34b6?crop=entropy&fit=crop&fm=jpg&h=725&ixjsv=2.1.0&ixlib=rb-0.3.5&q=80&w=1325">
-        <span>
+        <figcaption>
+          <span>
           <h2>week</h2>
           <h1>6</h1>
-        </span>
+          </span>
+          <p>description of week 6's event here</p>
+        </figcaption>
+      </figure>
       </div>
 
-      <div class="event-down">
+      <div class="event-down grid">
+        <figure class="effect-events-hover">
         <img class="img-event" src="https://images.unsplash.com/photo-1459695452562-46cc57bef5f6?ixlib=rb-0.3.5&q=80&fm=jpg&crop=entropy&w=1080&fit=max&s=f147d39444638780116004bc9cf9955a">
-        <span>
+        <figcaption>
+          <span>
           <h2>week</h2>
           <h1>7</h1>
-        </span>
+          </span>
+          <p>description of week 7's event here</p>
+        </figcaption>
+      </figure>
       </div>
 
-      <div class="event-up">
+      <div class="event-up grid">
+        <figure class="effect-events-hover">
         <img class="img-event" src="https://images.unsplash.com/photo-1459631836437-1c2824882e3f?ixlib=rb-0.3.5&q=80&fm=jpg&crop=entropy&w=1080&fit=max&s=ea977337154eb23fcfb0a65a4aaab5cb">
-        <span>
+        <figcaption>
+          <span>
           <h2>week</h2>
           <h1>8</h1>
-        </span>
+          </span>
+          <p>description of week 8's event here</p>
+        </figcaption>
+      </figure>
       </div>
 
-      <div class="event-down">
+      <div class="event-down grid">
+        <figure class="effect-events-hover">
         <img class="img-event" src="https://images.unsplash.com/photo-1459623837994-06d03aa27b9b?ixlib=rb-0.3.5&q=80&fm=jpg&crop=entropy&w=1080&fit=max&s=f677249fc6410d00732266e6684957fa">
-        <span>
+        <figcaption>
+          <span>
           <h2>week</h2>
           <h1>9</h1>
-        </span>
+          </span>
+          <p>description of week 9's event here</p>
+        </figcaption>
+      </figure>
       </div>
 
-      <div class="event-up">
+      <div class="event-up grid">
+        <figure class="effect-events-hover">
         <img class="img-event" src="https://images.unsplash.com/photo-1459594148148-2b53b11a7273?ixlib=rb-0.3.5&q=80&fm=jpg&crop=entropy&w=1080&fit=max&s=e6a60f50341a88dba2694d0f6d24a93e">
-        <span>
+        <figcaption>
+          <span>
           <h2>week</h2>
           <h1>10</h1>
-        </span>
+          </span>
+          <p>description of week 10's event here</p>
+        </figcaption>
+      </figure>
       </div>
     </div>
   </div>
