Finished constituents page

--- a/events.html
+++ b/events.html
@@ -40,10 +40,10 @@
       <ul class="nav navbar-nav menu__list">
         <li><a href="index.html" class="navlink">Home</a></li>
         <li class="navlink-active"><a href="events.html" class="navlink">Events</a></li>
-        <li><a href="#" class="navlink">Board</a></li>
-        <li><a href="#" class="navlink">Constituents</a></li>
-        <li><a href="#" class="navlink">Culture Night</a></li>
-        <li><a href="#" class="navlink">Contact</a></li>
+        <li><a href="board.html" class="navlink">Board</a></li>
+        <li><a href="constituents.html" class="navlink">Constituents</a></li>
+        <li><a href="culturenight.html" class="navlink">Culture Night</a></li>
+        <li><a href="contact.html" class="navlink">Contact</a></li>
       </ul>
       <ul class="nav navbar-nav navbar-right">
         <li><a href="#" class="nav-social"><i class="fa fa-facebook"></i></a></li>
@@ -62,7 +62,7 @@
   <!-- Wrapper for slides -->
   <div class="carousel-inner" role="listbox">
     <div class="item active">
-      <div class="event-up grid">
+      <div class="event-up events-grid">
         <figure class="effect-events-hover">
         <img class="img-event" src="https://images.unsplash.com/photo-1453227588063-bb302b62f50b?crop=entropy&fit=crop&fm=jpg&h=725&ixjsv=2.1.0&ixlib=rb-0.3.5&q=80&w=1325">
         <figcaption>
@@ -75,7 +75,7 @@
       </figure>
       </div>
 
-      <div class="event-down grid">
+      <div class="event-down events-grid">
         <figure class="effect-events-hover">
         <img class="img-event" src="https://images.unsplash.com/photo-1442512595331-e89e73853f31?ixlib=rb-0.3.5&q=80&fm=jpg&crop=entropy&w=1080&fit=max&s=a24580d4b984c1ede40051bf36afca1a">
         <figcaption>
@@ -88,7 +88,7 @@
       </figure>
       </div>
 
-      <div class="event-up grid">
+      <div class="event-up events-grid">
         <figure class="effect-events-hover">
         <img class="img-event" src="https://images.unsplash.com/photo-1459947639567-6be6434b9f9f?ixlib=rb-0.3.5&q=80&fm=jpg&crop=entropy&w=1080&fit=max&s=3bcdd2c89c309bd0530d9b60d49917d2">
         <figcaption>
@@ -101,7 +101,7 @@
       </figure>
       </div>
 
-      <div class="event-down grid">
+      <div class="event-down events-grid">
         <figure class="effect-events-hover">
         <img class="img-event" src="https://images.unsplash.com/photo-1459890986562-e2811aaa0e95?ixlib=rb-0.3.5&q=80&fm=jpg&crop=entropy&w=1080&fit=max&s=926da4f83563e257d04a47e48eb405b2">
         <figcaption>
@@ -114,7 +114,7 @@
       </figure>
       </div>
 
-      <div class="event-up grid">
+      <div class="event-up events-grid">
         <figure class="effect-events-hover">
         <img class="img-event" src="https://images.unsplash.com/photo-1459789867050-92376a5e7fab?ixlib=rb-0.3.5&q=80&fm=jpg&crop=entropy&w=1080&fit=max&s=389055adca0b68489c417eef0b60363f">
         <figcaption>
@@ -129,7 +129,7 @@
     </div>
 
     <div class="item">
-      <div class="event-up grid">
+      <div class="event-up events-grid">
         <figure class="effect-events-hover">
         <img class="img-event" src="https://images.unsplash.com/photo-1459706047544-bac915bf34b6?crop=entropy&fit=crop&fm=jpg&h=725&ixjsv=2.1.0&ixlib=rb-0.3.5&q=80&w=1325">
         <figcaption>
@@ -142,7 +142,7 @@
       </figure>
       </div>
 
-      <div class="event-down grid">
+      <div class="event-down events-grid">
         <figure class="effect-events-hover">
         <img class="img-event" src="https://images.unsplash.com/photo-1459695452562-46cc57bef5f6?ixlib=rb-0.3.5&q=80&fm=jpg&crop=entropy&w=1080&fit=max&s=f147d39444638780116004bc9cf9955a">
         <figcaption>
@@ -155,7 +155,7 @@
       </figure>
       </div>
 
-      <div class="event-up grid">
+      <div class="event-up events-grid">
         <figure class="effect-events-hover">
         <img class="img-event" src="https://images.unsplash.com/photo-1459631836437-1c2824882e3f?ixlib=rb-0.3.5&q=80&fm=jpg&crop=entropy&w=1080&fit=max&s=ea977337154eb23fcfb0a65a4aaab5cb">
         <figcaption>
@@ -168,7 +168,7 @@
       </figure>
       </div>
 
-      <div class="event-down grid">
+      <div class="event-down events-grid">
         <figure class="effect-events-hover">
         <img class="img-event" src="https://images.unsplash.com/photo-1459623837994-06d03aa27b9b?ixlib=rb-0.3.5&q=80&fm=jpg&crop=entropy&w=1080&fit=max&s=f677249fc6410d00732266e6684957fa">
         <figcaption>
@@ -181,7 +181,7 @@
       </figure>
       </div>
 
-      <div class="event-up grid">
+      <div class="event-up events-grid">
         <figure class="effect-events-hover">
         <img class="img-event" src="https://images.unsplash.com/photo-1459594148148-2b53b11a7273?ixlib=rb-0.3.5&q=80&fm=jpg&crop=entropy&w=1080&fit=max&s=e6a60f50341a88dba2694d0f6d24a93e">
         <figcaption>
@@ -208,8 +208,6 @@
 </div>
 
 
-</div>
-</section>
 
 
 <div class="footer">
