--- a/index.html
+++ b/index.html
@@ -40,10 +40,10 @@
       <ul class="nav navbar-nav menu__list">
         <li class="navlink-active"><a href="index.html" class="navlink">Home</a></li>
         <li><a href="events.html" class="navlink">Events</a></li>
-        <li><a href="#" class="navlink">Board</a></li>
-        <li><a href="#" class="navlink">Constituents</a></li>
-        <li><a href="#" class="navlink">Culture Night</a></li>
-        <li><a href="#" class="navlink">Contact</a></li>
+        <li><a href="board.html" class="navlink">Board</a></li>
+        <li><a href="constituents.html" class="navlink">Constituents</a></li>
+        <li><a href="culturenight.html" class="navlink">Culture Night</a></li>
+        <li><a href="contact.html" class="navlink">Contact</a></li>
       </ul>
       <ul class="nav navbar-nav navbar-right">
         <li><a href="#" class="nav-social"><i class="fa fa-facebook"></i></a></li>
@@ -306,7 +306,7 @@
   </div>
 </div>
 
-<div class="container wow animated fadeInUp" id="questions">
+<div class="container wow animated fadeInDown" id="questions">
   <h2>Questions, comments, concerns, compliments?</h2>
   <ul><a href="#contact" class="buttonlink"><li>contact us</li></a></ul>
 
