--- a/constituents.html
+++ b/constituents.html
@@ -59,7 +59,7 @@
   <div class="row">
     <div class="col-md-12">
       <h1>Our Constituents</h1>
-      <p>Hover on the images for more information on our constituents!</p>
+      <p>Hover or click on the images for more information on our constituents!</p>
 
       <div class="const-grid row">
           <div class="col-md-6">
