--- a/index.html
+++ b/index.html
@@ -308,7 +308,7 @@
 
 <div class="container wow animated fadeInDown" id="questions">
   <h2>Questions, comments, concerns, compliments?</h2>
-  <ul><a href="#contact" class="buttonlink"><li>contact us</li></a></ul>
+  <ul><a href="contact.html" class="buttonlink"><li>contact us</li></a></ul>
 
 </div>
 
