Site is mobile responsive

--- a/constituents.html
+++ b/constituents.html
@@ -57,38 +57,46 @@
 
 <div class="container" id="constituent">
   <div class="row">
-    <div class="col-md-12">
       <h1>Our Constituents</h1>
-      <p>Hover or click on the images for more information on our constituents!</p>
 
       <div class="const-grid row">
           <div class="col-md-6">
-          <figure class="effect-sarah">
-						<img src="http://cauci.com/media/L2/cadc01.jpg">
-						<figcaption>
-							<h2>Chinese Association <span>Dance Crew</span></h2>
-							<p>Formed in 1994, CADC has since become a prominent name within Southern California's hip hop dance scene. CADC is strictly a collegiate team, with all members currently enrolled as UCI students. CADC stresses having fun through competitive and exhibitive hip hop dancing.</p>
-						</figcaption>
-					</figure>
-          <img src="http://cauci.com/media/L2/cadclogo.png" class="const-logo">
-          <a href="http://www.cadcuci.net/cadc/">Official Website <i class="fa fa-chevron-right"></i></a>
+          <div class="row">
+            <figure class="const-hover">
+						  <img src="http://cauci.com/media/L2/cadc01.jpg">
+						  <figcaption>
+							  <h2>Chinese Association <span>Dance Crew</span></h2>
+						  </figcaption>
+					  </figure>
+
+            <p>Formed in 1994, CADC has since become a prominent name within Southern California's hip hop dance scene. CADC is strictly a collegiate team, with all members currently enrolled as UCI students. CADC stresses having fun through competitive and exhibitive hip hop dancing.</p>
+
+            <img src="http://cauci.com/media/L2/cadclogo.png" class="const-logo"><br>
+            <a href="http://www.cadcuci.net/cadc/">Official Website <i class="fa fa-chevron-right"></i></a>
+          </div>
+
+          <div class="row">
         </div>
+      </div>
+
         <div class="col-md-6">
-					<figure class="effect-sarah">
+          <div class="row">
+					<figure class="const-hover">
 						<img src="http://cauci.com/media/L2/cama01.jpg">
 						<figcaption>
 							<h2>Chinese Association<span>Martial Arts</span></h2>
-							<p>Founded in 2003, CAMA showcases traditional and contemporary forms, acrobatic tricks, fast-paced stunts, and fight choreography. CAMA strives to teach their styles in an environment that fosters growth, improvement, and family bonds.</p>
 						</figcaption>
 					</figure>
-          <img src="http://cauci.com/media/L2/camalogo.png" class="const-logo">
+
+          <p>Founded in 2003, CAMA showcases traditional and contemporary forms, acrobatic tricks, fast-paced stunts, and fight choreography. CAMA strives to teach their styles in an environment that fosters growth, improvement, and family bonds.</p>
+
+          <img src="http://cauci.com/media/L2/camalogo.png" class="const-logo"><br>
           <a href="http://cama.cauci.com/">Official Website <i class="fa fa-chevron-right"></i></a>
-				</div>
+        </div>
       </div>
-
-
-    </div>
+      </div>
   </div>
+</div>
 </div>
 
 
