--- a/board/jasonwan.html
+++ b/board/jasonwan.html
@@ -8,9 +8,8 @@
   <title>CAUCI</title>
 
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css" integrity="sha384-1q8mTJOASx8j1Au+a5WDVnPi2lkFfwwEAa8hDDdjZlpLegxhjVME1fgjWPGmkzs7" crossorigin="anonymous">
-  <link rel="stylesheet" type="text/css" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.5.0/css/font-awesome.min.css">
 
-  <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.5.0/css/font-awesome.min.css">
+  <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.6.0/css/font-awesome.min.css">
 
   <link rel="stylesheet" href="../css/animate.css">
 
@@ -46,10 +45,70 @@
         <li><a href="../contact.html" class="navlink">Contact</a></li>
       </ul>
       <ul class="nav navbar-nav navbar-right">
-        <li><a href="#" class="nav-social"><i class="fa fa-facebook"></i></a></li>
-        <li><a href="#" class="nav-social"><i class="fa fa-instagram"></i></a></li>
-        <li><a href="#" class="nav-social"><i class="fa fa-tumblr"></i></a></li>
-        <li><a href="#" class="nav-social"><i class="fa fa-flickr"></i></a></li>
+        <!-- INSTAGRAM -->
+        <li><a href="https://www.facebook.com/CAUCIrvine" class="nav-social" target="_blank">
+          <span class="nav-tooltip nav-tooltip-hover">
+            <span class="nav-tooltip-item">
+              <i class="fa fa-facebook"></i></span>
+              <span class="nav-tooltip-content clearfix">
+                <span class="nav-tooltip-text">
+                  caucirvine
+                </span>
+              </span>
+            </span>
+          </a></li>
+
+        <!-- INSTAGRAM -->
+        <li><a href="https://www.instagram.com/caucirvine/" class="nav-social" target="_blank">
+          <span class="nav-tooltip nav-tooltip-hover">
+            <span class="nav-tooltip-item">
+              <i class="fa fa-instagram"></i></span>
+              <span class="nav-tooltip-content clearfix">
+                <span class="nav-tooltip-text">
+                  caucirvine
+                </span>
+              </span>
+            </span>
+          </a></li>
+
+        <!-- TUMBLR -->
+        <li><a href="http://caucinewsletter.tumblr.com/" class="nav-social" target="_blank">
+          <span class="nav-tooltip nav-tooltip-hover">
+            <span class="nav-tooltip-item">
+              <i class="fa fa-tumblr"></i></span>
+              <span class="nav-tooltip-content clearfix">
+                <span class="nav-tooltip-text">
+                  caucinewsletter
+                </span>
+              </span>
+            </span>
+          </a></li>
+
+        <!-- FLICKR -->
+        <li><a href="https://www.flickr.com/photos/cauci" class="nav-social" target="_blank">
+          <span class="nav-tooltip nav-tooltip-hover">
+            <span class="nav-tooltip-item">
+              <i class="fa fa-flickr"></i></span>
+              <span class="nav-tooltip-content clearfix">
+                <span class="nav-tooltip-text">
+                  cauci
+                </span>
+              </span>
+            </span>
+          </a></li>
+
+        <!-- SNAPCHAT -->
+        <li><a href="#" class="nav-social">
+          <span class="nav-tooltip nav-tooltip-hover">
+            <span class="nav-tooltip-item">
+              <i class="fa fa-snapchat-ghost"></i></span>
+              <span class="nav-tooltip-content clearfix">
+                <span class="nav-tooltip-text">
+                  cauci
+                </span>
+              </span>
+            </span>
+          </a></li>
       </ul>
     </div><!-- /.navbar-collapse -->
   </div><!-- /.container-fluid -->
@@ -111,12 +170,24 @@
 
 <div class="footer">
   <p>Chinese Association at the University of California, Irvine</p>
-    <i class="fa fa-facebook"></i></a>
-    <i class="fa fa-instagram"></i></a>
-    <i class="fa fa-tumblr"></i></a>
-    <i class="fa fa-flickr"></i></a>
+    <a href="https://www.facebook.com/CAUCIrvine" target="_blank"><i class="fa fa-facebook"></i></a>
+    <a href="https://www.instagram.com/caucirvine/" target="_blank"><i class="fa fa-instagram"></i></a>
+    <a href="http://caucinewsletter.tumblr.com/" target="_blank"><i class="fa fa-tumblr"></i></a>
+    <a href="https://www.flickr.com/photos/cauci" target="_blank"><i class="fa fa-flickr"></i></a>
+    <a href="#">
+      <span class="footer-tooltip footer-tooltip-hover">
+        <span class="footer-tooltip-item">
+          <i class="fa fa-snapchat-ghost"></i></span>
+          <span class="footer-tooltip-content clearfix">
+            <span class="footer-tooltip-text">
+              cauci
+            </span>
+          </span>
+        </span>
+      </a>
   </ul>
 </div>
+
 
 </body>
 
